--- a/FlashCard-Ariel-main/FLASHCARD-Ariel/assets/style.css
+++ b/FlashCard-Ariel-main/FLASHCARD-Ariel/assets/style.css
@@ -12,9 +12,6 @@ body {
 #container {
     display: flex; 
     flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 4rem;
-    gap: 3rem;
 }
 
 .cartao {
@@ -23,24 +20,17 @@ body {
     flex-grow: 1;
     flex-basis: calc(33% - 6rem);
 }
+
 .cartao_conteudo {
-    background-color: var(--card-front-color);
+    background-image: url('../assets/img/fundoCarta.jpeg');
+    background-size: auto;
+    background-position: center; 
+    background-repeat: no-repeat; 
     text-align: center;
     height: 100%;
     transform-style: preserve-3d;
     transition: transform 300ms ease-in-out;
-}
-
-.cartao_conteudo h3 {
-    color: var(--text-color);
-    border: 1px solid var(--text-color);
-    text-align: left;
-    padding: 0.5rem;
-    position: absolute;
-    margin: 0.6rem;
-    border-radius: 0.6rem;
-    font-size: 1vw;
-    backface-visibility: hidden;
+    position: relative;
 }
 
 .cartao_conteudo_pergunta p {
@@ -68,23 +58,7 @@ body {
 
 .cartao_conteudo_resposta{
     transform: rotateY(180deg);
-    background-color: rgba(0, 244, 191, 0.2);
-    border: 4px solid var(--card-back-color);
-}
-
-footer {
-    background-color: black;
-    color: white;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    height: 2rem;
-}
-
-footer p {
-    text-align: center;
-    font-size: 0.6rem;
-    margin-top: 0.5rem;
+    background-image: url('');
 }
 
 @media (max-width: 560px) {
